--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -41,7 +41,7 @@ jobs:
       if: ${{ matrix.os == 'ubuntu-latest' }}
       run: |
         sudo apt-get update
-        sudo apt-get install -y --no-install-recommends build-essential
+        sudo apt-get install -y --no-install-recommends build-essential libboost-dev
         sudo apt-get clean
 
     - name: Set up build tools (Windows)
