--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
         arch: [amd64, arm64, armv7]
     runs-on: ${{ matrix.os }}
     steps:
@@ -39,7 +39,7 @@ jobs:
     - name: Set up CMake
       uses: lukka/get-cmake@v3.31.3
 
-    - name: Set up build tools
+    - name: Set up build tools (Linux)
       if: ${{ matrix.os == 'ubuntu-latest' }}
       run: |
         sudo apt-get update
@@ -51,12 +51,6 @@ jobs:
       run: |
         choco install visualstudio2019buildtools --package-parameters \
         '--add Microsoft.VisualStudio.Workload.VCTools --includeRecommended --quiet'
-
-    - name: Set up build tools (macOS)
-      if: ${{ matrix.os == 'macos-latest' }}
-      run: |
-        brew update
-        brew install boost
 
     - name: Configure build
       run: |
