--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,9 +46,9 @@ jobs:
     - name: Configure build
       run: |
         cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-              -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
-              -DBUILD_TESTS=False . \
-              -B ./build
+          -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
+          -DBUILD_TESTS=False . \
+          -B ./build
 
     - name: Build
       run: cmake --build ./build --parallel
@@ -57,7 +57,9 @@ jobs:
       run: cmake --install ./build --prefix .
   
     - name: Zip artifacts
-      run: zip -r ${{ matrix.os }}-${{ matrix.arch }}.zip ./dist
+      run: |
+        cd dist
+        zip -r ${{ matrix.os }}-${{ matrix.arch }}.zip .
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
