--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,11 +44,11 @@ jobs:
         sudo apt-get clean
 
     - name: Configure build
-      run: |
-        cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-          -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
-          -DBUILD_TESTS=False . \
-          -B ./build
+      run: >-
+        cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+              -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }}
+              -DBUILD_TESTS=False . \
+              -B ./build
 
     - name: Build
       run: cmake --build ./build --parallel
