--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,10 +45,11 @@ jobs:
 
     - name: Configure build
       run: >-
-        cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
-              -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }}
-              -DBUILD_TESTS=False . \
-              -B ./build
+        cmake 
+        -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }}
+        -DBUILD_TESTS=False . \
+        -B ./build
 
     - name: Build
       run: cmake --build ./build --parallel
