--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Build and publish Docker image
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -18,52 +18,10 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
-  # Configure release type [Release, Debug, RelWithDebInfo, MinSizeRel]
-  BUILD_TYPE: Release
 
 
 jobs:
-  binary:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        arch: [amd64, arm64, armv7]
-    runs-on: ${{ matrix.os }}
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        submodules: 'recursive'
-
-    - name: Set up build tools (Linux)
-      if: ${{ matrix.os == 'ubuntu-latest' }}
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y --no-install-recommends build-essential libboost-dev
-        sudo apt-get clean
-
-    - name: Configure build
-      run: cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} -DBUILD_TESTS=False . \ -B ./build
-
-    - name: Build
-      run: cmake --build ./build --parallel
-
-    - name: Install
-      run: cmake --install ./build --prefix .
-  
-    - name: Zip artifacts
-      run: |
-        cd dist
-        zip -r ${{ matrix.os }}-${{ matrix.arch }}.zip .
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.os }}-${{ matrix.arch }}-binary
-        path: ${{ matrix.os }}-${{ matrix.arch }}.zip
-
-  docker:
+  build:
     strategy:
       fail-fast: false
       matrix:
